<resources>
    <string name="app_name">Toss App</string>
    <string name="select_a_game">Select a Game</string>
    <string name="heads_or_tails">Heads or Tails</string>
    <string name="spin_the_bottle">Spin the Bottle</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="toss">Toss</string>
    <string name="spin">Spin</string>
    <string name="coin_image">Coin Image</string>
    <string name="bottle_image">Bottle Image</string>
</resources>